package component;

public interface Movable {
    public abstract void move();
}
