package component;

import javafx.scene.canvas.GraphicsContext;

public interface Renderable {
    public abstract void render(GraphicsContext gc);
}
