@startuml
interface component.Renderable {
+ {abstract}void render(GraphicsContext)
}
class app.Main {
+ {static} int WIDTH
+ {static} int HEIGHT
+ {static} int numLives
- int score
- boolean bossExists
- boolean reset
- Label scoreLabel
- Label lifeLabel
- List<GameObject> gameObjects
- List<GameObject> newObjects
- Monkey monkey
- Pane root
- Scene scene
- boolean levelUpShown
- Stage primaryStage
+ {static} void main(String[])
+ void start(Stage)
- void spawnEnemy()
- void checkCollisions()
- void checkEnemiesReachingBottom()
- void resetGame()
- void initEventHandlers(Scene)
- void spawnPowerUp()
- void spawnBossEnemy()
- void checkScore()
- Pane createMenu()
- Button createButton(String,double)
- void showInstructions()
- void showTempMessage(String,double,double,double)
- void startGame()
}
class component.NormalDog {
# {static} int WIDTH
# {static} int HEIGHT
+ {static} double SPEED
- boolean isDead
+ <<Create>> NormalDog(double,double)
+ void move()
+ void render(GraphicsContext)
+ double getWidth()
+ double getHeight()
+ boolean isDead()
+ void setDead(boolean)
}
abstract class component.GameObject {
# double x
# double y
# double width
# double height
+ <<Create>> GameObject(double,double,double,double)
+ {abstract}void move()
+ {abstract}void render(GraphicsContext)
+ {abstract}boolean isDead()
+ Bounds getBounds()
+ double getX()
+ void setX(double)
+ double getY()
+ void setY(double)
+ double getWidth()
+ void setWidth(double)
+ double getHeight()
+ void setHeight(double)
}
class component.Monkey {
- {static} int WIDTH
- {static} int HEIGHT
- {static} double SPEED
- boolean hasMovedLeft
- boolean hasMovedRight
- boolean hasMovedForward
- boolean hasMovedBackward
- int health
- boolean isDead
+ <<Create>> Monkey(double,double)
+ void move()
+ void render(GraphicsContext)
+ void shoot(List<GameObject>)
+ boolean isHasMovedLeft()
+ void setHasMovedLeft(boolean)
+ boolean isHasMovedRight()
+ void setHasMovedRight(boolean)
+ boolean isHasMovedForward()
+ void setHasMovedForward(boolean)
+ boolean isHasMovedBackward()
+ void setHasMovedBackward(boolean)
+ int getHealth()
+ void setHealth(int)
+ double getWidth()
+ double getHeight()
+ boolean isDead()
+ void setDead(boolean)
}
class component.SmallDog {
+ {static} int WIDTH
+ {static} int HEIGHT
- {static} double SPEED
- boolean isDead
+ <<Create>> SmallDog(double,double)
+ void move()
+ void render(GraphicsContext)
+ double getWidth()
+ double getHeight()
+ boolean isDead()
+ void setDead(boolean)
}
class component.Bullet {
+ {static} int WIDTH
+ {static} int HEIGHT
- {static} double SPEED
- boolean isDead
+ <<Create>> Bullet(double,double)
+ void move()
+ void render(GraphicsContext)
+ double getWidth()
+ double getHeight()
+ boolean isDead()
+ void setDead(boolean)
}
interface component.Movable {
+ {abstract}void move()
}
class component.DogBullet {
+ {static} int WIDTH
+ {static} int HEIGHT
- {static} double SPEED
- boolean isDead
+ <<Create>> DogBullet(double,double)
+ void move()
+ void render(GraphicsContext)
+ double getWidth()
+ double getHeight()
+ boolean isDead()
+ void setDead(boolean)
}
abstract class component.Dog {
# {static} int width
# {static} int height
+ {static} double speed
- boolean isDead
+ <<Create>> Dog(double,double,int,int)
+ void move()
+ void render(GraphicsContext)
+ double getWidth()
+ double getHeight()
+ {static} void setWidth(int)
+ {static} void setHeight(int)
+ boolean isDead()
+ void setDead(boolean)
+ {static} double getSpeed()
+ {static} void setSpeed(double)
}
class component.BossDog {
- int health
# {static} int WIDTH
# {static} int HEIGHT
+ {static} double SPEED
- int numHits
+ <<Create>> BossDog(double,double)
+ void move()
+ void render(GraphicsContext)
+ void takeDamage()
+ boolean isDead()
+ double getWidth()
+ double getHeight()
+ int getHealth()
+ void setHealth(int)
+ int getNumHits()
+ void setNumHits(int)
}


javafx.application.Application <|-- app.Main
component.Dog <|-- component.NormalDog
component.Movable <|.. component.GameObject
component.Renderable <|.. component.GameObject
component.GameObject <|-- component.Monkey
component.Dog <|-- component.SmallDog
component.GameObject <|-- component.Bullet
component.GameObject <|-- component.DogBullet
component.GameObject <|-- component.Dog
component.Dog <|-- component.BossDog
@enduml